2002-06-21  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c (get_stdin): changed
	(temporarily!) the level for some notice messages that were
	getting logged regardless of the configured LogLevel.

2002-06-19  Jacob Smullyan  <jsmullyan@wnyc.org>

	* TODO: cleaned up, added and removed.

	* SkunkWeb/Services/requestHandler/requestHandler.py: added
	missing import.

	* pylibs/vfs/vfs.py (FS.walk): fixed typo pointed out by pychecker.

2002-06-18  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/sample_webdocs/demo/gallery/index.html, 
	SkunkWeb/sample_webdocs/demo/index.html, 
	SkunkWeb/sample_webdocs/demo/geeknews/index.html, 
	SkunkWeb/sample_webdocs/index.html:  added bit so that favicon.ico 
	will show up in mozilla

	* SkunkWeb/Makefile.in: added bit for favicon.ico

	* SkunkWeb/sample_webdocs/favicon.ico: added

	* SkunkWeb/Services/templating/MailServices.py: fixed way old bug.
	Had a reference to AED that would get hit when sending a message
	via SMTP would fail.

	* pylibs/parfile.py(foo): removed, as it's been useless for a while 
	now.

	* pylibs/AE/ComponentTag.py: use of __args__ would cause an error
	(used == instead of =)!

	* SkunkWeb/Services/scgi.py: fixed typo that caused problems on POSTs
	
	* SkunkWeb/Services/requestHandler/requestHandler.py: SkunkExcept
	wasn't imported so could cause problems in certain cases, fixed.

	* pylibs/prompt.py: fixed niggly bug

	* pylibs/IOTO.py: removed unused import

	* pylibs/Config.py: removed a few unused imports

	* pylibs/BasicAuth.py: fixed a few stupid bugs

	* pylibs/Authenticator.py: removed unused variable

	* pylibs/ErrorHandler.py: fixed typo, was raising CriticalError and
	should've been SkunkCriticalError

	* pylibs/AE/cfg.py: fixed typo

	* pylibs/AE/TypeTag.py: Had unused didanything variable -- removed

	* pylibs/AE/InitTags.py: was missing an import of SkunkExcept

	* pylibs/AE/ComponentTag.py: removed a useless import
	of string module
